# perlin-noise-generator

./: CMakeLists.txt  README.md  main.cpp
include/: draw.h  shader.h
include/glad/: glad.h
lib/: draw.cpp  glad.c  shader.cpp
shaders/: fragment.glsl  vertex.glsl
